Fix site screenshot was stretched wide on iPhone
- Introduced by 90046ea

--- a/site/app/assets/stylesheets/home.css
+++ b/site/app/assets/stylesheets/home.css
@@ -47,8 +47,13 @@
 }
 
 .screenshot {
+  align-items: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   max-width: 100%;
+  min-height: 200px;
+}
+
+.screenshot img {
   min-height: 200px;
 }
